--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
     <nav class="navbar navbar-custom text-center">
       <div class="container-fluid">
         <a class="navbar-brand mx-auto fw-bold" href="#">Notes</a>
+        <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+        </a>
       </div>
     </nav>
 
