--- a/frontend/login.html
+++ b/frontend/login.html
@@ -33,7 +33,7 @@
       <div>
         Do not have an account? <a href="register.html">Register here</a>
       </div>
-      <button type="submit">Login</button>
+      <button type="submit" style="background-color: #f093b7; color: rgb(0, 0, 0);">Login</button>
     </form>
   </div>
 
