--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,13 @@
     <nav class="navbar navbar-custom text-center">
       <div class="container-fluid">
         <a class="navbar-brand mx-auto fw-bold" href="#">Notes</a>
-        <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+        <button class="btn btn-outline-danger" id="logoutBtn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-7A1.5 1.5 0 0 0 1 3.5v9A1.5 1.5 0 0 0 2.5 14h7a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+            <path fill-rule="evenodd" d="M15.354 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L13.293 7.5H5.5a.5.5 0 0 0 0 1h7.793l-1.647 1.646a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg>
+          Logout
+        </button>
         </a>
       </div>
     </nav>
@@ -25,7 +31,7 @@
         <label for="konten" class="form-label">Konten Note</label>
         <textarea class="form-control" id="konten" rows="3"></textarea>
       </div>
-      <div class="btn btn-success w-100" onclick="saveNote()">Simpan Note</div>
+      <div class="btn w-100" style="background-color: #f093b7; color: rgb(0, 0, 0);" onclick="saveNote()">Simpan Note</div>
       <hr />
       <div id="notesContainer"></div>
     </div>
