--- a/frontend/register.html
+++ b/frontend/register.html
@@ -25,7 +25,7 @@
             <div>
                 Already have an account? <a href="login.html">Login here</a>
             </div>
-            <button type="submit">Register</button>
+            <button type="submit" style="background-color: #f093b7; color: rgb(0, 0, 0);">Register</button>
         </form>
     </div>
 
